<resources>
    <string name="app_name">menuApp</string>
    <string name="menu">Cardápio</string>
    <string name="entradas">Entradas</string>
    <string name="batata_frita">Batata Frita</string>
    <string name="bolinha_queijo">Bolinha de Queijo</string>
    <string name="minutos_10">(10 minutos)</string>
    <string name="price">R$ 10,00</string>
    <string name="total">Total</string>
    <string name="confirmButton">Realizar Pedido</string>
    <string name="preferences">Preferências:</string>
    <string name="main_course">Pratos Principais</string>
    <string name="drinks">Bebidas</string>
    <string name="dessert">Sobremesas</string>
</resources>