<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginTop="2dp"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/name_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batata_frita"
        android:textColor="@color/light_orange"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/red"
        android:layout_marginStart="13dp"
        android:checked="false" />

    <TextView
        android:id="@+id/time_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/name_product"
        android:layout_toEndOf="@id/name_product"
        android:text="@string/minutos_10"
        android:layout_marginStart="5dp"
        android:textColor="@color/light_yellow"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/time_product"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/price"
        android:textColor="@color/light_orange"
        android:textSize="18sp"
        android:textStyle="bold" />



</RelativeLayout>