<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/main_layout">

        <TextView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textStyle="bold"
            android:textSize="48sp"
            android:textColor="@color/light_orange"
            android:layout_marginTop="2dp"
            android:paddingBottom="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:id="@+id/rc_container"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_section"
            app:layout_constraintTop_toBottomOf="@id/menu">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/parent_item">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/button_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/light_orange"
                    android:textSize="28sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="167dp"
                    android:text="@string/price"
                    android:textColor="@color/light_orange"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="28dp"
                android:text="@string/confirmButton"
                android:textSize="26sp"
                android:textColor="@color/light_orange"
                android:textStyle="bold"
                android:backgroundTint="@color/red">
            </Button>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>